--- a/tasks/binary-builder-integration-power.yml
+++ b/tasks/binary-builder-integration-power.yml
@@ -6,9 +6,11 @@ inputs:
 params:
   SPEC_TO_RUN:
   RUN_ORACLE_PHP_TESTS: false
+  EXCLUDE_ON_PPC64LE: false
   RUBYGEM_MIRROR:
   AWS_ACCESS_KEY:
   AWS_SECRET_ACCESS_KEY:
   BINARY_BUILDER_PLATFORM:
+  BINARY_BUILDER_OS_NAME:
 run:
   path: buildpacks-ci/scripts/binary-builder-integration.sh
