--- a/Dockerfile.ppc64le
+++ b/Dockerfile.ppc64le
@@ -1,11 +1,12 @@
-FROM 140.211.168.97:5000/ruby:2.2.3
+FROM 140.211.168.97:5000/ruby:2.3.1
 
 ENV LANG="C.UTF-8"
 
-RUN apt-get update
+RUN apt-get upgrade && apt-get update
 RUN apt-get -y install \
   awscli \
   aufs-tools \
+  curl \
   expect \
   git \
   iptables \
@@ -17,10 +18,19 @@ RUN apt-get -y install \
   php5 \
   python-dev \
   python-pip \
+  shellcheck \
   wget \
   zip
 
 #RUN curl -sSL https://get.docker.com/ | sh
+
+RUN wget https://master.dockerproject.org/linux/ppc64le/dockerd \
+          https://master.dockerproject.org/linux/ppc64le/docker-proxy \
+          https://master.dockerproject.org/linux/ppc64le/docker-runc \
+          https://master.dockerproject.org/linux/ppc64le/docker \
+          https://master.dockerproject.org/linux/ppc64le/docker-containerd \
+          https://master.dockerproject.org/linux/ppc64le/docker-containerd-shim -P /usr/local/bin/ \
+    && chmod +x /usr/local/bin/*
 
 RUN git config --global user.email "cf-buildpacks-eng@pivotal.io"
 RUN git config --global user.name "CF Buildpacks Team CI Server"
@@ -35,13 +45,16 @@ RUN git config --global core.pager cat
 # godep is a package manager for golang apps
 #RUN GOPATH=/go go get github.com/tools/godep
 
+# Ensure Concourse Filter binary is present
+RUN wget 'https://s3.amazonaws.com/buildpacks-store/concourse-filter' && mv concourse-filter /usr/local/bin && chmod +x /usr/local/bin/concourse-filter
+
 # composer is a package manager for PHP apps
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/bin/
 RUN mv /usr/bin/composer.phar /usr/bin/composer
 
 # download the CF-CLI
 #RUN wget -O- 'https://cli.run.pivotal.io/stable?release=linux64-binary&version=6.15.0&source=github-rel'| tar xz -C /usr/bin
-#RUN wget -P /usr/bin http://ftp.unicamp.br/pub/ppc64el/ubuntu/14_04/cloud-foundry/cf
+RUN wget -P /usr/bin http://ftp.unicamp.br/pub/ppc64el/ubuntu/14_04/cloud-foundry/cf && chmod +x /usr/bin/cf
 
 #RUN cf install-plugin Diego-Enabler -f -r CF-Community
 
@@ -53,13 +66,15 @@ RUN mv /usr/bin/composer.phar /usr/bin/composer
 #RUN wget -O- https://github.com/github/hub/releases/download/v2.2.1/hub-linux-amd64-2.2.1.tar.gz | tar xz -C /usr/bin --strip-components=1 hub-linux-amd64-2.2.1/hub
 
 # when docker container starts, ensure login scripts run
-#COPY build/*.sh /etc/profile.d/
+COPY build/*.sh /etc/profile.d/
 
-RUN gem install bosh_cli bosh_cli_plugin_micro rake bundler
+RUN gem install bundler
+COPY Gemfile /usr/local/Gemfile
+RUN cd /usr/local && bundle install
 
 #install fly-cli
-#RUN curl "https://buildpacks.ci.cf-app.com/api/v1/cli?arch=amd64&platform=linux" -sfL -o /usr/local/bin/fly
-#RUN chmod +x /usr/local/bin/fly
+RUN curl "http://140.211.168.99:8080/api/v1/cli?arch=amd64&platform=linux" -sfL -o /usr/local/bin/fly
+RUN chmod +x /usr/local/bin/fly
 
 # git-hooks and git-secrets
 #RUN curl -L https://github.com/git-hooks/git-hooks/releases/download/v1.1.3/git-hooks_linux_amd64.tar.gz | tar -zxf - --to-stdout > /usr/local/bin/git-hooks
@@ -68,3 +83,9 @@ RUN git clone https://github.com/awslabs/git-secrets && cd git-secrets && make i
 
 # Ensure that Concoure filtering is on for non-interactive shells
 ENV BASH_ENV /etc/profile.d/filter.sh
+
+# Install go 1.6.2
+RUN cd /usr/local && curl -L http://ftp.unicamp.br/pub/ppc64el/ubuntu/14_04/cloud-foundry/go-1.6.2-ppc64le.tar.gz -o go.tar.gz && tar xf go.tar.gz && mv go/bin/go /usr/local/bin/go && rm -rf /usr/local/go.tar.gz
+ENV GOPATH=/go
+ENV PATH=$PATH:/go/bin
+RUN mkdir -p $GOPATH/src && cd $GOPATH/src && go get github.com/tools/godep && git clone https://github.com/git-hooks/git-hooks && cd git-hooks && make get && go install
