--- a/tasks/build-binary/task-power.yml
+++ b/tasks/build-binary/task-power.yml
@@ -16,3 +16,5 @@ run:
     - buildpacks-ci/tasks/build-binary/run.rb
 params:
   RUBYGEM_MIRROR:
+  BINARY_BUILDER_PLATFORM:
+  BINARY_BUILDER_OS_NAME:
